--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,8 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
-  database: db/development.mysql2
-  pool: 5
+  adapter: sqlite3
+  database: db/development.sqlite3
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
@@ -19,7 +18,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: db/production.mysql2
   pool: 5
   timeout: 5000
