--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,9 @@ test:
 
 production:
   adapter: mysql2
-  database: db/production.mysql2
-  pool: 5
-  timeout: 5000
+  encoding: utf8
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
